# ParaManager

./: pyproject.toml
paramanager/: Parameter.py  ParameterSet.py  ProtoParameter.py  __init__.py
tests/: __init__.py  test_ParameterSet.py  test_ProtoParameter.py
